feat(portfolio): add navbar and about me section.

--- a/advanced-frontend-lessons/tailwind-css/package.json
+++ b/advanced-frontend-lessons/tailwind-css/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "tailwind-css",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "tailwindcss": "^3.2.7"
-  }
+	"name": "tailwind-css",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"cssbuild": "npx tailwindcss -i ./src/input.css -o ./public/style.css --watch",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"tailwindcss": "^3.2.7"
+	}
 }
